--- a/5.ipynb
+++ b/5.ipynb
@@ -625,7 +625,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ex_screenshot](./img/2.png)"
+    "![ex_screenshot1](./img/2.PNG)"
    ]
   },
   {
@@ -1171,7 +1171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ex_screenshot](./img/3.png)"
+    "![ex_screenshot1](./img/3.PNG)"
    ]
   },
   {
